--- a/app/src/main/res/drawable/user.xml
+++ b/app/src/main/res/drawable/user.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="@dimen/_18sdp"
-    android:height="@dimen/_18sdp"
+    android:width="18dp"
+    android:height="18dp"
     android:viewportWidth="512"
     android:viewportHeight="512">
   <path
