--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="gray">#A1A1A1</color>
+    <color name="hidden">#00000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_orange">#ffa544</color>
     <color name="strong_orange">#e18200</color>
