--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,15 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Zalpia" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Zalpia" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/light_orange</item>
-        <item name="colorPrimaryVariant">@color/strong_orange</item>
+        <item name="colorPrimaryVariant">@color/white</item>
         <item name="colorOnPrimary">@color/white</item>
         <item name="color">#00000000</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/very2_light_orange</item>
         <item name="colorSecondaryVariant">@color/very_light_orange</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
@@ -18,6 +18,7 @@
     <style name="Theme.Zalpia.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:forceDarkAllowed">false</item>
     </style>
 
     <style name="Theme.Zalpia.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
